<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityITUni"
    android:background="#37406f">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:paddingLeft="90dp"
        tools:ignore="MissingConstraints">
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Software Engineering"
            tools:layout_editor_absoluteX="188dp"
            tools:layout_editor_absoluteY="59dp"
            android:textColor="#000"
            android:textSize="20dp"
            android:padding="10dp"
            android:textStyle="bold"
            android:background="@drawable/background"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="72dp"
        android:layout_height="129dp"
        android:paddingLeft="3dp"
        android:paddingTop="40dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="70dp"
            android:layout_height="71dp"
            app:srcCompat="@drawable/clickhere" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="300dp"
        android:paddingTop="500dp"
        tools:ignore="MissingConstraints">

    <ImageView
        android:id="@+id/toHome"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/home"
        tools:layout_editor_absoluteX="269dp"
        tools:layout_editor_absoluteY="633dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="23dp"
        android:paddingTop="115dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iitSoftware"
            tools:layout_editor_absoluteX="140dp"
            tools:layout_editor_absoluteY="159dp"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColorLink="#fff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="52dp"
        android:paddingTop="115dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="- Informatics Institute of"
            tools:layout_editor_absoluteX="140dp"
            tools:layout_editor_absoluteY="159dp"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#fff" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="63dp"
        android:paddingTop="137dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Technology"
            tools:layout_editor_absoluteX="140dp"
            tools:layout_editor_absoluteY="159dp"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#fff" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="230dp"
        android:paddingTop="155dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ugc"
            tools:layout_editor_absoluteX="140dp"
            tools:layout_editor_absoluteY="159dp"
            android:textStyle="bold"
            android:textSize="15dp"
            android:textColor="#FF0000" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="18dp"
        android:paddingTop="183dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sliitSoftware"
            tools:layout_editor_absoluteX="140dp"
            tools:layout_editor_absoluteY="159dp"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColorLink="#fff" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="70dp"
        android:paddingTop="183dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="- Sri Lanka Institute of"
            tools:layout_editor_absoluteX="140dp"
            tools:layout_editor_absoluteY="159dp"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#fff" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="84dp"
        android:paddingTop="205dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Information Technology"
            tools:layout_editor_absoluteX="140dp"
            tools:layout_editor_absoluteY="159dp"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#fff" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="230dp"
        android:paddingTop="232dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ugc"
            tools:layout_editor_absoluteX="140dp"
            tools:layout_editor_absoluteY="159dp"
            android:textStyle="bold"
            android:textSize="15dp"
            android:textColor="#FF0000" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="18dp"
        android:paddingTop="248dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icbtSoftware"
            tools:layout_editor_absoluteX="140dp"
            tools:layout_editor_absoluteY="159dp"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColorLink="#fff" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="18dp"
        android:paddingTop="285dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/northshoreSoftware"
            tools:layout_editor_absoluteX="140dp"
            tools:layout_editor_absoluteY="159dp"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColorLink="#fff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="18dp"
        android:paddingTop="345dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nsbmSoftware"
            tools:layout_editor_absoluteX="140dp"
            tools:layout_editor_absoluteY="159dp"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColorLink="#fff" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="230dp"
        android:paddingTop="370dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ugc"
            tools:layout_editor_absoluteX="140dp"
            tools:layout_editor_absoluteY="159dp"
            android:textStyle="bold"
            android:textSize="15dp"
            android:textColor="#FF0000" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="18dp"
        android:paddingTop="390dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/esoftSoftware"
            tools:layout_editor_absoluteX="140dp"
            tools:layout_editor_absoluteY="159dp"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColorLink="#fff" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="18dp"
        android:paddingTop="430dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appitSoftware"
            tools:layout_editor_absoluteX="140dp"
            tools:layout_editor_absoluteY="159dp"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColorLink="#fff" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="70dp"
        android:paddingTop="430dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="- Asia Pacific Institute Of"
            tools:layout_editor_absoluteX="140dp"
            tools:layout_editor_absoluteY="159dp"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#fff" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="80dp"
        android:paddingTop="453dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Information Technology"
            tools:layout_editor_absoluteX="140dp"
            tools:layout_editor_absoluteY="159dp"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#fff" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="230dp"
        android:paddingTop="478dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ugc"
            tools:layout_editor_absoluteX="140dp"
            tools:layout_editor_absoluteY="159dp"
            android:textStyle="bold"
            android:textSize="15dp"
            android:textColor="#FF0000" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>